--- a/_posts/2025-12-07-블로그 활용기 1탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법.md
+++ b/_posts/2025-12-07-블로그 활용기 1탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법.md
@@ -1,5 +1,5 @@
 ---
-title: "[blog] 블로그 제작기 7탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법"
+title: "[blog] 블로그 활용기 1탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법"
 categories: [blog, github]
 tags: [blog, github]
 toc: false
