블로그 제작기 3탄 작성 완료 및 카테고리&더미 문서 작성 완료

--- a/_posts/blog/2025-12-04-블로그 제작기 5탄 - css를 적용해보자.md
+++ b/_posts/blog/2025-12-04-블로그 제작기 5탄 - css를 적용해보자.md
@@ -1,7 +1,7 @@
 ---
-title: "[blog] 블로그 제작기 4탄 - 비공개 게시글 만들기"
+title: "[blog] 블로그 제작기 5탄 - css를 적용해보자"
 date: 2025-01-22 19:00:00 +0900
-categories: [blog, github]
+categories: [blog]
 tags: [blog, github]
 toc: false
 ---
