--- a/_posts/blog/2025-12-07-블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축로컬 테스트.md
+++ b/_posts/blog/2025-12-07-블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축로컬 테스트.md
@@ -1,6 +1,6 @@
 ---
 title: "[blog] 블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축"
-categories: [blog, github]
+categories: [blog]
 tags: [blog, github]
 toc: false
 ---
