--- a/_posts/blog/2025-12-04-블로그 제작기 4탄 - 비공게 게시글 만들기.md
+++ b/_posts/blog/2025-12-04-블로그 제작기 4탄 - 비공게 게시글 만들기.md
@@ -1,7 +1,7 @@
 ---
-title: "[blog] 블로그 제작기 3탄 - 카테고리 분류 및 게시판 정리"
+title: "[blog] 블로그 제작기 4탄 - 비공개 게시글 만들기"
 date: 2025-01-22 19:00:00 +0900
-categories: [blog, github]
+categories: [blog]
 tags: [blog, github]
 toc: false
 ---
