--- a/_posts/blog/2025-12-07-블로그 활용기 1탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법.md
+++ b/_posts/blog/2025-12-07-블로그 활용기 1탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법.md
@@ -1,6 +1,6 @@
 ---
 title: "[blog] 블로그 활용기 1탄 - Chirpy v7.x에서 접기(토글) 기능 사용하는 방법"
-categories: [blog, github]
+categories: [blog]
 tags: [blog, github]
 toc: false
 ---
