--- a/_posts/blog/2025-12-10-블로그 제작기 4탄 - 블로그 스타일 변경.md
+++ b/_posts/blog/2025-12-10-블로그 제작기 4탄 - 블로그 스타일 변경.md
@@ -119,5 +119,6 @@ layout: default
 
 | 기존 페이지 | 변경 후 페이지 |
 |------|------|
-| ![기존 페이지](/assets/img/posts/blog/2025-12-10-블로그 제작기 4탄\기존페이지.png) | ![변경 후 페이지](/assets/img/posts/blog/2025-12-10-블로그 제작기 4탄\변경후페이지.png) |
+<!-- | ![기존 페이지](/assets/img/posts/blog/2025-12-10/img_01.png) | ![변경 후 페이지](/assets/img/posts/blog/2025-12-10/img_02.png) | -->
+| ![기존 페이지]({{ "/assets/img/posts/blog/2025-12-10/img_01.png" | relative_url }}) | ![변경 후 페이지]({{ "/assets/img/posts/blog/2025-12-10/img_02.png" | relative_url }}) |
 
