블로그 제작기 정렬 기능 추가

--- a/_posts/blog/2025-12-07-블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축로컬 테스트.md
+++ b/_posts/blog/2025-12-07-블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축로컬 테스트.md
@@ -1,7 +1,7 @@
 ---
 title: "[blog] 블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축"
-categories: [blog]
-tags: [blog, github]
+categories: [blog, 제작기]
+tags: [blog, github, chirpy, jekyll]
 toc: false
 ---
 ## **작성 목적**
