--- a/_posts/blog/2025-12-07-블로그 제작기 1탄 - 구축 단계 정리.md
+++ b/_posts/blog/2025-12-07-블로그 제작기 1탄 - 구축 단계 정리.md
@@ -1,7 +1,7 @@
 ---
 title: "[blog] 블로그 제작기 1탄 - 구축 단계 정리"
-categories: [blog]
-tags: [blog, github]
+categories: [blog, 제작기]
+tags: [blog, github, chirpy, jekyll]
 toc: false
 ---
 
