--- a/_posts/blog/2025-12-09-블로그 제작기 3탄 - 카테고리 분류 및 게시판 정리.md
+++ b/_posts/blog/2025-12-09-블로그 제작기 3탄 - 카테고리 분류 및 게시판 정리.md
@@ -1,7 +1,7 @@
 ---
 title: "[blog] 블로그 제작기 3탄 - 카테고리 분류 및 게시판 정리"
-categories: [blog]
-tags: [blog, github]
+categories: [blog, 제작기]
+tags: [blog, github, chirpy, jekyll]
 toc: false
 ---
 
