feat: introduce series_order for series ordering and add index policy

--- a/_posts/2025/12/blog/제작기/2025-12-07-[블로그 제작기]-1탄-구축 단계 정리.md
+++ b/_posts/2025/12/blog/제작기/2025-12-07-[블로그 제작기]-1탄-구축 단계 정리.md
@@ -1,9 +1,23 @@
 ---
 title: "[blog] 블로그 제작기 1탄 - 구축 단계 정리"
 categories: [blog, 제작기]
+series : "블로그 제작기"
+series_order: 10
 tags: [blog, github, chirpy, jekyll]
-toc: false
+toc: true
 ---
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
+
+<div class="series-box">
+  <div class="series-title">바로가기</div>
+  <ul>
+    {% for post in series_posts %}
+      <li {% if post.url == page.url %}class="current"{% endif %}>
+        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 
 ## 1. GitHub 프로젝트를 작성하게 된 계기
 
