--- a/_posts/2025/12/blog/제작기/2025-12-07-[블로그 제작기]-2탄-GitHub 블로그 로컬 테스트 환경 구축로컬 테스트.md
+++ b/_posts/2025/12/blog/제작기/2025-12-07-[블로그 제작기]-2탄-GitHub 블로그 로컬 테스트 환경 구축로컬 테스트.md
@@ -2,8 +2,23 @@
 title: "[blog] 블로그 제작기 2탄 - GitHub 블로그 로컬 테스트 환경 구축"
 categories: [blog, 제작기]
 tags: [blog, github, chirpy, jekyll]
-toc: false
+series : "블로그 제작기"
+series_order: 20
+toc: true
 ---
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
+
+<div class="series-box">
+  <div class="series-title">바로가기</div>
+  <ul>
+    {% for post in series_posts %}
+      <li {% if post.url == page.url %}class="current"{% endif %}>
+        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
+
 ## **작성 목적**
 
 GitHub Pages 기반 블로그(Jekyll 테마)를 사용할 때, 로컬 환경에서 미리 테스트하면 빌드 오류를 빠르게 확인하고 안정적으로 게시할 수 있다.  
