--- a/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-6탄-블로그 구조 개편 정리 (연도 + 의미 폴더 유지 전략).md
+++ b/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-6탄-블로그 구조 개편 정리 (연도 + 의미 폴더 유지 전략).md
@@ -1,12 +1,13 @@
 ---
-title: "[blog] 블로그 구조 개편 정리 (연도 + 의미 폴더 유지 전략)"
-categories: [blog, github]
+title: "[blog] 블로그 제작기 6탄 - 블로그 구조 개편 정리 (연도 + 의미 폴더 유지 전략)"
+categories: [blog, github, 제작기]
 tags: [blog, jekyll, chirpy, structure]
 layout: post
 series : "블로그 제작기"
+series_order: 60
 toc: true
 ---
-{% assign series_posts = site.posts | where: "series", page.series | sort: "date" %}
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
 <div class="series-box">
   <div class="series-title">바로가기</div>
