--- a/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-7탄-댓글 만들기 및 관리하기.md
+++ b/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-7탄-댓글 만들기 및 관리하기.md
@@ -1,10 +1,24 @@
 ---
-title: "[blog] GitHub 블로그 댓글을 기본으로 달고, 한 곳에서 관리하는 방법 (작성중)"
-categories: [blog, devops]
+title: "[blog] 블로그 제작기 7탄 - GitHub 블로그 댓글을 기본으로 달고, 한 곳에서 관리하는 방법 (작성중)"
+categories: [blog, 제작기]
 tags: [github-pages, comments, giscus, discussions]
 layout: post
+series : "블로그 제작기"
+series_order: 70
 toc: true
 ---
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
+
+<div class="series-box">
+  <div class="series-title">바로가기</div>
+  <ul>
+    {% for post in series_posts %}
+      <li {% if post.url == page.url %}class="current"{% endif %}>
+        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 
 ## 이 글에서 해결하고 싶은 문제
 
