--- a/_posts/2025/12/blog/활용기/2025-12-07-[블로그 활용기]-1탄-Chirpy v7.x에서 접기(토글) 기능 사용하는 방법.md
+++ b/_posts/2025/12/blog/활용기/2025-12-07-[블로그 활용기]-1탄-Chirpy v7.x에서 접기(토글) 기능 사용하는 방법.md
@@ -4,9 +4,21 @@ categories: [blog, 활용기]
 tags: [blog, github, chirpy, jekyll, 기능사용]
 layout: post
 series : "블로그 활용기"
+series_order: 10
 toc: true
 ---
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
+<div class="series-box">
+  <div class="series-title">바로가기</div>
+  <ul>
+    {% for post in series_posts %}
+      <li {% if post.url == page.url %}class="current"{% endif %}>
+        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 
 ## Chirpy v7.x에서 접기(토글) 기능 사용하는 방법
 
