--- a/_posts/2025/12/blog/제작기/2025-12-09-[블로그 제작기]-3탄-카테고리 분류 및 게시판 정리.md
+++ b/_posts/2025/12/blog/제작기/2025-12-09-[블로그 제작기]-3탄-카테고리 분류 및 게시판 정리.md
@@ -2,8 +2,22 @@
 title: "[blog] 블로그 제작기 3탄 - 카테고리 분류 및 게시판 정리"
 categories: [blog, 제작기]
 tags: [blog, github, chirpy, jekyll]
-toc: false
+series : "블로그 제작기"
+series_order: 30
+toc: true
 ---
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
+
+<div class="series-box">
+  <div class="series-title">바로가기</div>
+  <ul>
+    {% for post in series_posts %}
+      <li {% if post.url == page.url %}class="current"{% endif %}>
+        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 
 ## 개요
 블로그를 조금씩 꾸미다 보니, 글이 많아질수록 정리가 필요해졌다.  
