--- a/_posts/2025/12/blog/제작기/2025-12-12-[블로그 제작기]-5탄-비공게 게시글 만들기.md
+++ b/_posts/2025/12/blog/제작기/2025-12-12-[블로그 제작기]-5탄-비공게 게시글 만들기.md
@@ -2,8 +2,22 @@
 title: "[blog] 블로그 제작기 5탄 - 비공개 게시글 만들기"
 categories: [blog, 제작기]
 tags: [blog, github]
-toc: false
+series : "블로그 제작기"
+series_order: 50
+toc: true
 ---
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
+
+<div class="series-box">
+  <div class="series-title">바로가기</div>
+  <ul>
+    {% for post in series_posts %}
+      <li {% if post.url == page.url %}class="current"{% endif %}>
+        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 
 ## ✔ 목표
 
