--- a/_posts/2025/12/blog/활용기/2025-12-13-[블로그 활용기]-3.5탄-포스트모드를 전역적으로 사용하는 방법 정리.md
+++ b/_posts/2025/12/blog/활용기/2025-12-13-[블로그 활용기]-3.5탄-포스트모드를 전역적으로 사용하는 방법 정리.md
@@ -4,10 +4,10 @@ categories: [blog, 활용기]
 tags: [blog, gpt]
 layout: post
 series : "블로그 활용기"
+series_order: 35
 toc: true
 ---
-
-{% assign series_posts = site.posts | where: "series", page.series | sort: "date" %}
+{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
 <div class="series-box">
   <div class="series-title">바로가기</div>
