Revert "Feature/issue 11 blog category structure"

--- a/_posts/blog/2025-12-07-블로그 제작기 1탄 - 구축 단계 정리.md
+++ b/_posts/blog/2025-12-07-블로그 제작기 1탄 - 구축 단계 정리.md
@@ -1,23 +1,9 @@
 ---
 title: "[blog] 블로그 제작기 1탄 - 구축 단계 정리"
 categories: [blog, 제작기]
-series : "블로그 제작기"
-series_order: 10
 tags: [blog, github, chirpy, jekyll]
-toc: true
+toc: false
 ---
-{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
-
-<div class="series-box">
-  <div class="series-title">바로가기</div>
-  <ul>
-    {% for post in series_posts %}
-      <li {% if post.url == page.url %}class="current"{% endif %}>
-        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
 
 ## 1. GitHub 프로젝트를 작성하게 된 계기
 
@@ -78,7 +64,9 @@ GitHub 기반 블로그 생성 방식은 크게 3가지로 나눌 수 있다.
 - Public 설정  
 - 저장소 생성
 
-![Github 저장소]({{ "/assets/img/posts/2025/12/blog/2025-12-03/img_01.png" | relative_url }})
+<!-- ![Github 저장소](/assets/img/posts/blog/2025-12-03/img_01.png) -->
+![Github 저장소]({{ "/assets/img/posts/blog/2025-12-03/img_01.png" | relative_url }})
+
 
 ---
 
