--- a/_posts/blog/2025-12-10-블로그 제작기 4탄 - 블로그 스타일 변경.md
+++ b/_posts/blog/2025-12-10-블로그 제작기 4탄 - 블로그 스타일 변경.md
@@ -2,23 +2,8 @@
 title: "[blog] 블로그 제작기 4탄 - 블로그 스타일 변경"
 categories: [blog, 제작기]
 tags: [blog, github]
-series : "블로그 제작기"
-series_order: 40
-toc: true
+toc: false
 ---
-{% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
-
-<div class="series-box">
-  <div class="series-title">바로가기</div>
-  <ul>
-    {% for post in series_posts %}
-      <li {% if post.url == page.url %}class="current"{% endif %}>
-        <a href="{{ post.url }}">{{ forloop.index }}. {{ post.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
-
 ### 목표
 1. Home 페이지 → Zapier-style “문서 인덱스 + 섹션형 홈”
 2. 프로젝트 Overview 페이지 템플릿 → Zapier 문서 구조 기반
@@ -134,5 +119,5 @@ layout: default
 
 | 기존 페이지 | 변경 후 페이지 |
 |------|------|\
-| ![기존 페이지]({{ "/assets/img/posts/2025/12/blog/2025-12-10/img_01.png" | relative_url }}) | ![변경 후 페이지]({{ "/assets/img/posts/2025/12/blog/2025-12-10/img_02.png" | relative_url }}) |
+| ![기존 페이지]({{ "/assets/img/posts/blog/2025-12-10/img_01.png" | relative_url }}) | ![변경 후 페이지]({{ "/assets/img/posts/blog/2025-12-10/img_02.png" | relative_url }}) |
 
