giscus 설치 및 config 설정 완료

--- a/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-7탄-댓글 만들기 및 관리하기.md
+++ b/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-7탄-댓글 만들기 및 관리하기.md
@@ -4,8 +4,9 @@ categories: [blog, 제작기]
 tags: [github-pages, comments, giscus, discussions]
 layout: post
 series : "블로그 제작기"
-series_order: 0
+series_order: 70
 toc: true
+comments: true
 ---
 {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
