--- a/_posts/2025/12/blog/제작기/2025-12-07-[블로그 제작기]-1탄-구축 단계 정리.md
+++ b/_posts/2025/12/blog/제작기/2025-12-07-[블로그 제작기]-1탄-구축 단계 정리.md
@@ -5,6 +5,7 @@ series : "블로그 제작기"
 series_order: 10
 tags: [blog, github, chirpy, jekyll]
 toc: true
+comments: true
 ---
 {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
