--- a/_posts/2025/12/blog/제작기/2025-12-09-[블로그 제작기]-3탄-카테고리 분류 및 게시판 정리.md
+++ b/_posts/2025/12/blog/제작기/2025-12-09-[블로그 제작기]-3탄-카테고리 분류 및 게시판 정리.md
@@ -5,6 +5,7 @@ tags: [blog, github, chirpy, jekyll]
 series : "블로그 제작기"
 series_order: 30
 toc: true
+comments: true
 ---
 {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
