--- a/_posts/2025/12/blog/제작기/2025-12-10-[블로그 제작기]-4탄-블로그 스타일 변경.md
+++ b/_posts/2025/12/blog/제작기/2025-12-10-[블로그 제작기]-4탄-블로그 스타일 변경.md
@@ -5,6 +5,7 @@ tags: [blog, github]
 series : "블로그 제작기"
 series_order: 40
 toc: true
+comments: true
 ---
 {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
