fix: Chirpy Related Posts가 설정으로 비활성화되지 않는 문제 해결

--- a/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-6탄-블로그 구조 개편 정리 (연도 + 의미 폴더 유지 전략).md
+++ b/_posts/2025/12/blog/제작기/2025-12-13-[블로그 제작기]-6탄-블로그 구조 개편 정리 (연도 + 의미 폴더 유지 전략).md
@@ -7,6 +7,7 @@ series : "블로그 제작기"
 series_order: 60
 toc: true
 comments: true
+related_posts: false
 ---
 {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
 
