--- a/_posts/2025/12/blog/제작기/2025-12-14-[블로그 제작기]-7탄-시리즈 정렬, Index, 그리고 카테고리의 역할 정리.md
+++ b/_posts/2025/12/blog/제작기/2025-12-14-[블로그 제작기]-7탄-시리즈 정렬, Index, 그리고 카테고리의 역할 정리.md
@@ -7,6 +7,7 @@ series: "블로그 제작기"
 series_order: 70
 toc: true
 comments: true
+show_series: false
 ---
 
 {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
